fix css overlaping issues

--- a/src/layout/containers/main_container/style.css
+++ b/src/layout/containers/main_container/style.css
@@ -17,15 +17,17 @@
 # Page Title
 --------------------------------------------------------------*/
 
-  
+  .pagetitle {
+      margin: 10px 0 10px 0;
+  }
   .pagetitle h1 {
     font-size: 26px;
     font-weight: 600;
     color: #012970;
   }
 
-  /* Breadcrumbs */
-.breadcrumb {
+    /* Breadcrumbs */
+  .breadcrumb {
     font-size: 14px;
     font-family: "Nunito", sans-serif;
     color: #899bbd;
